--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -413,9 +412,9 @@
                     <a href="#" class="btn-primary">Shop Now</a>
                 </div>
                 <div class="product-card">
-                    <div class="product-image">🍓</div>
-                    <h3>Berry Fusion</h3>
-                    <p>BeetBOOST combined with organic berries for an antioxidant powerhouse that's both delicious and nutritious.</p>
+                    <div class="product-image">🌿</div>
+                    <h3>BeetBOOST Natural</h3>
+                    <p>Our signature beetroot yogurt in its purest form, showcasing the natural earthy sweetness and vibrant color of premium beetroot.</p>
                     <a href="#" class="btn-primary">Shop Now</a>
                 </div>
                 <div class="product-card">
