--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
                 <li><a href="#benefits" class="nav-link">Benefits</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="Review.html" class="nav-link">Contact</a></li>
             </ul>
             <a href="#order" class="cta-button">Order Now</a>
         </div>
