--- a/index.html
+++ b/index.html
@@ -716,9 +716,10 @@
                     <a href="#">Contact Support</a>
                 </div>
                 <div class="footer-section">
-                    <h3>Connect With Us</h3>
-                    <a href="#">Facebook</a>
-                    <a href="#">Instagram</a>
+                <h3>Connect With Us</h3>
+                <a href="https://www.instagram.com/lucas_auzem/" target="_blank" rel="noopener">Instagram</a>
+                <a href="https://www.facebook.com/Lucas.Auzem" target="_blank" rel="noopener">Facebook</a>
+                <a href="mailto:auzemerylucas@gmail.com">auzemerylucas@gmail.com</a>>
                     <a href="#">Twitter</a>
                     <a href="#">Newsletter</a>
                 </div>
