--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                 <h3>Connect With Us</h3>
                 <a href="https://www.instagram.com/lucas_auzem/" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.facebook.com/Lucas.Auzem" target="_blank" rel="noopener">Facebook</a>
-                <a href="mailto:auzemerylucas@gmail.com">auzemerylucas@gmail.com</a>>
+                <a href="mailto:auzemerylucas@gmail.com">auzemerylucas@gmail.com</a>
                     <a href="#">Twitter</a>
                     <a href="#">Newsletter</a>
                 </div>
