--- a/index.html
+++ b/index.html
@@ -694,7 +694,15 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer"> style="position: relative; overflow: hidden;">
+    <!-- Background image with dark overlay for readability -->
+    <div style="
+        position: absolute;
+        inset: 0;
+        z-index: 0;
+        background: img src="Perth.jpg") center center/cover no-repeat;
+        opacity: 0.45;
+        filter: brightness(0.7) blur(1px);
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
