--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>BeetBOOST - Revolutionary Dairy-Free Beetroot Yogurt</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        /* ...existing styles... */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         :root {
             --primary-burgundy: #8B1538;
@@ -244,7 +239,6 @@
             background: linear-gradient(135deg, var(--soft-rose), var(--primary-burgundy));
         }
 
-        /* Nutritional Table */
         .nutrition-section {
             background: var(--soft-rose);
             padding: 4rem 0 4rem 0;
@@ -362,10 +356,25 @@
             text-align: center;
         }
 
+        /* Footer background image and overlay */
         .footer {
+            position: relative;
+            overflow: hidden;
             background: var(--primary-burgundy);
             color: white;
             padding: 3rem 0 2rem;
+        }
+        .footer-bg {
+            position: absolute;
+            inset: 0;
+            z-index: 0;
+            background: url('https://pplx-res.cloudinary.com/image/private/user_uploads/40364014/3593c0ac-01e3-43a2-8aec-cca1018c5c15/Perth.jpg') center center/cover no-repeat;
+            opacity: 0.45;
+            filter: brightness(0.7) blur(1px);
+        }
+        .footer-content, .footer-bottom {
+            position: relative;
+            z-index: 1;
         }
 
         .footer-content {
@@ -377,17 +386,16 @@
 
         .footer-section h3 {
             margin-bottom: 1rem;
-            color: var(--soft-rose);
+            color: #fff;
         }
 
         .footer-section a {
-            color: white;
+            color: #fff;
             text-decoration: none;
             display: block;
             margin-bottom: 0.5rem;
             transition: color 0.3s ease;
         }
-
         .footer-section a:hover {
             color: var(--soft-rose);
         }
@@ -395,8 +403,8 @@
         .footer-bottom {
             text-align: center;
             padding-top: 2rem;
-            border-top: 1px solid var(--soft-rose);
-            opacity: 0.8;
+            border-top: 1px solid #fff2;
+            opacity: 0.9;
         }
 
         @media (max-width: 768px) {
@@ -404,41 +412,30 @@
                 grid-template-columns: 1fr;
                 text-align: center;
             }
-
             .hero-content h1 {
                 font-size: 2.5rem;
             }
-
             .nav-menu {
                 display: none;
             }
-
             .product-grid {
                 grid-template-columns: 1fr;
             }
             .nutrition-table-container, .complete-amino-section {
                 padding: 1rem 0.5rem;
             }
+            .footer-content {
+                grid-template-columns: 1fr;
+            }
         }
 
-        html {
-            scroll-behavior: smooth;
-        }
+        html { scroll-behavior: smooth; }
 
         @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(30px);}
+            to { opacity: 1; transform: translateY(0);}
         }
-
-        .animated {
-            animation: fadeInUp 0.8s ease-out;
-        }
+        .animated { animation: fadeInUp 0.8s ease-out; }
     </style>
 </head>
 <body>
@@ -636,73 +633,63 @@
             </div>
             <!-- Complete Amino Acid Profile Section -->
             <div class="complete-amino-section" style="position: relative;">
-    <div style="display: flex; flex-direction: column; align-items: center;">
-        <div style="display: flex; gap: 28px; margin-bottom: 1.2rem;">
-            <!-- Example amino acid molecule icons (SVG, free use, styled for your palette) -->
-            <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Leucine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                <circle cx="26" cy="26" r="20" fill="#C41E3A" opacity="0.15"/>
-                <circle cx="26" cy="26" r="12" fill="#8B1538" opacity="0.25"/>
-                <circle cx="26" cy="26" r="5" fill="#4A7C59"/>
-                <circle cx="40" cy="18" r="4" fill="#E8B4CB"/>
-                <circle cx="14" cy="36" r="3" fill="#C41E3A"/>
-                <line x1="26" y1="26" x2="40" y2="18" stroke="#8B1538" stroke-width="2"/>
-                <line x1="26" y1="26" x2="14" y2="36" stroke="#C41E3A" stroke-width="2"/>
-            </svg>
-            <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Valine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                <circle cx="26" cy="26" r="20" fill="#4A7C59" opacity="0.13"/>
-                <circle cx="26" cy="26" r="12" fill="#C41E3A" opacity="0.18"/>
-                <circle cx="26" cy="26" r="5" fill="#8B1538"/>
-                <circle cx="38" cy="34" r="4" fill="#E8B4CB"/>
-                <circle cx="16" cy="16" r="3" fill="#C41E3A"/>
-                <line x1="26" y1="26" x2="38" y2="34" stroke="#4A7C59" stroke-width="2"/>
-                <line x1="26" y1="26" x2="16" y2="16" stroke="#C41E3A" stroke-width="2"/>
-            </svg>
-            <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Isoleucine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                <circle cx="26" cy="26" r="20" fill="#E8B4CB" opacity="0.15"/>
-                <circle cx="26" cy="26" r="12" fill="#C41E3A" opacity="0.21"/>
-                <circle cx="26" cy="26" r="5" fill="#8B1538"/>
-                <circle cx="34" cy="14" r="4" fill="#4A7C59"/>
-                <circle cx="20" cy="40" r="3" fill="#C41E3A"/>
-                <line x1="26" y1="26" x2="34" y2="14" stroke="#C41E3A" stroke-width="2"/>
-                <line x1="26" y1="26" x2="20" y2="40" stroke="#8B1538" stroke-width="2"/>
-            </svg>
-            <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Amino acid molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                <circle cx="26" cy="26" r="20" fill="#C41E3A" opacity="0.10"/>
-                <circle cx="26" cy="26" r="12" fill="#4A7C59" opacity="0.18"/>
-                <circle cx="26" cy="26" r="5" fill="#C41E3A"/>
-                <circle cx="38" cy="20" r="4" fill="#E8B4CB"/>
-                <circle cx="16" cy="32" r="3" fill="#8B1538"/>
-                <line x1="26" y1="26" x2="38" y2="20" stroke="#4A7C59" stroke-width="2"/>
-                <line x1="26" y1="26" x2="16" y2="32" stroke="#C41E3A" stroke-width="2"/>
-            </svg>
-        </div>
-        <div class="complete-amino-title" style="margin-bottom: 1.3rem;">Complete Amino Acid Profile</div>
-    </div>
-    <div class="complete-amino-desc">
-        BeetBOOST is formulated with a premium soy protein blend that delivers all 9 essential amino acids, including 1.9g of BCAAs (leucine, isoleucine, valine) per 100g, supporting muscle recovery and growth.<br><br>
-        Unlike most plant-based yogurts, BeetBOOST provides a complete protein profile comparable to dairy, but without lactose or animal products. This makes it a perfect protein source for vegans and anyone seeking clean, plant-based nutrition.<br><br>
-        Complete plant proteins not only help build and repair muscle, but also support immune health and overall wellness, making BeetBOOST an ideal choice for active lifestyles and balanced diets.<br>
-        <span style="color:#E8B4CB;font-size:0.97em;font-weight:600;display:block;margin-top:1.2rem;">
-            Enjoy BeetBOOST as a protein-rich snack, post-workout recovery, or anytime your body craves quality plant protein!
-        </span>
-    </div>
-</div>
-
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <div style="display: flex; gap: 28px; margin-bottom: 1.2rem;">
+                        <!-- Example amino acid molecule icons (SVG, free use, styled for your palette) -->
+                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Leucine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
+                            <circle cx="26" cy="26" r="20" fill="#C41E3A" opacity="0.15"/>
+                            <circle cx="26" cy="26" r="12" fill="#8B1538" opacity="0.25"/>
+                            <circle cx="26" cy="26" r="5" fill="#4A7C59"/>
+                            <circle cx="40" cy="18" r="4" fill="#E8B4CB"/>
+                            <circle cx="14" cy="36" r="3" fill="#C41E3A"/>
+                            <line x1="26" y1="26" x2="40" y2="18" stroke="#8B1538" stroke-width="2"/>
+                            <line x1="26" y1="26" x2="14" y2="36" stroke="#C41E3A" stroke-width="2"/>
+                        </svg>
+                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Valine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
+                            <circle cx="26" cy="26" r="20" fill="#4A7C59" opacity="0.13"/>
+                            <circle cx="26" cy="26" r="12" fill="#C41E3A" opacity="0.18"/>
+                            <circle cx="26" cy="26" r="5" fill="#8B1538"/>
+                            <circle cx="38" cy="34" r="4" fill="#E8B4CB"/>
+                            <circle cx="16" cy="16" r="3" fill="#C41E3A"/>
+                            <line x1="26" y1="26" x2="38" y2="34" stroke="#4A7C59" stroke-width="2"/>
+                            <line x1="26" y1="26" x2="16" y2="16" stroke="#C41E3A" stroke-width="2"/>
+                        </svg>
+                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Isoleucine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
+                            <circle cx="26" cy="26" r="20" fill="#E8B4CB" opacity="0.15"/>
+                            <circle cx="26" cy="26" r="12" fill="#C41E3A" opacity="0.21"/>
+                            <circle cx="26" cy="26" r="5" fill="#8B1538"/>
+                            <circle cx="34" cy="14" r="4" fill="#4A7C59"/>
+                            <circle cx="20" cy="40" r="3" fill="#C41E3A"/>
+                            <line x1="26" y1="26" x2="34" y2="14" stroke="#C41E3A" stroke-width="2"/>
+                            <line x1="26" y1="26" x2="20" y2="40" stroke="#8B1538" stroke-width="2"/>
+                        </svg>
+                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Amino acid molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
+                            <circle cx="26" cy="26" r="20" fill="#C41E3A" opacity="0.10"/>
+                            <circle cx="26" cy="26" r="12" fill="#4A7C59" opacity="0.18"/>
+                            <circle cx="26" cy="26" r="5" fill="#C41E3A"/>
+                            <circle cx="38" cy="20" r="4" fill="#E8B4CB"/>
+                            <circle cx="16" cy="32" r="3" fill="#8B1538"/>
+                            <line x1="26" y1="26" x2="38" y2="20" stroke="#4A7C59" stroke-width="2"/>
+                            <line x1="26" y1="26" x2="16" y2="32" stroke="#C41E3A" stroke-width="2"/>
+                        </svg>
+                    </div>
+                    <div class="complete-amino-title" style="margin-bottom: 1.3rem;">Complete Amino Acid Profile</div>
+                </div>
+                <div class="complete-amino-desc">
+                    BeetBOOST is formulated with a premium soy protein blend that delivers all 9 essential amino acids, including 1.9g of BCAAs (leucine, isoleucine, valine) per 100g, supporting muscle recovery and growth.<br><br>
+                    Unlike most plant-based yogurts, BeetBOOST provides a complete protein profile comparable to dairy, but without lactose or animal products. This makes it a perfect protein source for vegans and anyone seeking clean, plant-based nutrition.<br><br>
+                    Complete plant proteins not only help build and repair muscle, but also support immune health and overall wellness, making BeetBOOST an ideal choice for active lifestyles and balanced diets.<br>
+                    <span style="color:#E8B4CB;font-size:0.97em;font-weight:600;display:block;margin-top:1.2rem;">
+                        Enjoy BeetBOOST as a protein-rich snack, post-workout recovery, or anytime your body craves quality plant protein!
+                    </span>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="footer"> style="position: relative; overflow: hidden;">
-    <!-- Background image with dark overlay for readability -->
-    <div style="
-        position: absolute;
-        inset: 0;
-        z-index: 0;
-        background: img src="Perth.jpg") center center/cover no-repeat;
-        opacity: 0.45;
-        filter: brightness(0.7) blur(1px);
+    <footer class="footer">
+        <div class="footer-bg"></div>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
@@ -724,12 +711,10 @@
                     <a href="#">Contact Support</a>
                 </div>
                 <div class="footer-section">
-                <h3>Connect With Us</h3>
-                <a href="https://www.instagram.com/lucas_auzem/" target="_blank" rel="noopener">Instagram</a>
-                <a href="https://www.facebook.com/Lucas.Auzem" target="_blank" rel="noopener">Facebook</a>
-                <a href="mailto:auzemerylucas@gmail.com">auzemerylucas@gmail.com</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Newsletter</a>
+                    <h3>Connect With Us</h3>
+                    <a href="https://www.instagram.com/lucas_auzem/" target="_blank" rel="noopener">Instagram</a>
+                    <a href="https://www.facebook.com/Lucas.Auzem" target="_blank" rel="noopener">Facebook</a>
+                    <a href="mailto:auzemerylucas@gmail.com">auzemerylucas@gmail.com</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -742,10 +727,12 @@
         // Smooth scrolling for navigation links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
+                if (this.getAttribute('href').startsWith("#")) {
+                    e.preventDefault();
+                    document.querySelector(this.getAttribute('href')).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
             });
         });
 
