--- a/index.html
+++ b/index.html
@@ -164,6 +164,19 @@
             border-radius: 20px;
         }
 
+        /* Cute beetroot character styles */
+        .beetroot-character-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 3rem 0 2.5rem 0;
+        }
+        .beetroot-character {
+            width: 140px;
+            height: 170px;
+            display: block;
+        }
+
         .product-section {
             padding: 6rem 0;
             background: var(--pure-white);
@@ -469,6 +482,39 @@
         </div>
     </section>
 
+    <!-- Cute Beetroot Character in the middle of the page -->
+    <div class="beetroot-character-wrapper">
+        <!-- SVG: Cute Beetroot Character -->
+        <svg class="beetroot-character" viewBox="0 0 140 170" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Cute Beetroot Character">
+            <!-- Beetroot body -->
+            <ellipse cx="70" cy="100" rx="48" ry="60" fill="#C41E3A" stroke="#8B1538" stroke-width="4"/>
+            <!-- Beetroot face -->
+            <ellipse cx="70" cy="120" rx="22" ry="18" fill="#fff" opacity="0.15"/>
+            <!-- Smile -->
+            <path d="M60 122 Q70 130 80 122" stroke="#8B1538" stroke-width="3" fill="none" stroke-linecap="round"/>
+            <!-- Eyes -->
+            <ellipse cx="58" cy="115" rx="4" ry="6" fill="#2C2C2C"/>
+            <ellipse cx="82" cy="115" rx="4" ry="6" fill="#2C2C2C"/>
+            <!-- Cheeks -->
+            <ellipse cx="52" cy="125" rx="4" ry="2" fill="#E8B4CB"/>
+            <ellipse cx="88" cy="125" rx="4" ry="2" fill="#E8B4CB"/>
+            <!-- Leaf 1 -->
+            <path d="M70 45 Q60 25 80 15 Q90 10 85 30 Q80 50 70 45 Z" fill="#4A7C59" stroke="#38804A" stroke-width="2"/>
+            <!-- Leaf 2 -->
+            <path d="M70 45 Q90 25 110 30 Q120 35 105 50 Q90 65 70 45 Z" fill="#6FCF97" stroke="#38804A" stroke-width="2"/>
+            <!-- Leaf 3 -->
+            <path d="M70 45 Q50 25 30 40 Q20 50 45 60 Q65 70 70 45 Z" fill="#4A7C59" stroke="#38804A" stroke-width="2"/>
+            <!-- Arms -->
+            <path d="M22 130 Q10 140 30 150" stroke="#8B1538" stroke-width="4" fill="none" stroke-linecap="round"/>
+            <path d="M118 130 Q130 140 110 150" stroke="#8B1538" stroke-width="4" fill="none" stroke-linecap="round"/>
+            <!-- Hands -->
+            <ellipse cx="28" cy="152" rx="5" ry="3" fill="#C41E3A"/>
+            <ellipse cx="112" cy="152" rx="5" ry="3" fill="#C41E3A"/>
+            <!-- Shine on beetroot -->
+            <ellipse cx="85" cy="90" rx="9" ry="18" fill="#fff" opacity="0.13"/>
+        </svg>
+    </div>
+
     <!-- Products Section -->
     <section id="products" class="product-section">
         <div class="container">
@@ -631,7 +677,7 @@
                     <p>Sustained energy release without artificial stimulants or processed sugars.</p>
                 </div>
             </div>
-            <!-- Complete Amino Acid Profile Section -->
+            <!-- Complete Amino Acid Profile Section with molecules -->
             <div class="complete-amino-section" style="position: relative;">
                 <div style="display: flex; flex-direction: column; align-items: center;">
                     <div style="display: flex; gap: 28px; margin-bottom: 1.2rem;">
