--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BeetBOOST - Revolutionary Dairy-Free Beetroot Yogurt</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
+        /* ...existing styles... */
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         :root {
@@ -158,7 +159,6 @@
             box-shadow: 0 10px 30px rgba(139, 21, 56, 0.3);
         }
 
-        /* Hero Image Circle and Beetroot Character */
         .hero-image {
             position: relative;
             width: 400px;
@@ -275,6 +275,7 @@
             border-radius: 18px;
             box-shadow: 0 6px 24px rgba(139, 21, 56, 0.08);
             padding: 2rem 2rem 1rem 2rem;
+            position: relative;
         }
         .nutrition-title {
             text-align: center;
@@ -305,6 +306,14 @@
             color: var(--text-light);
             margin-top: 0.5rem;
             text-align: center;
+        }
+        .made-in-au-badge {
+            position: absolute;
+            top: 1.5rem;
+            right: 2rem;
+            width: 220px;
+            max-width: 40vw;
+            z-index: 2;
         }
 
         .benefits-section {
@@ -381,7 +390,6 @@
             text-align: center;
         }
 
-        /* Footer background image and overlay */
         .footer {
             position: relative;
             overflow: hidden;
@@ -446,6 +454,11 @@
                 width: 110px;
                 height: 140px;
             }
+            .made-in-au-badge {
+                width: 130px;
+                top: 0.7rem;
+                right: 0.7rem;
+            }
         }
         @media (max-width: 768px) {
             .hero-container {
@@ -488,6 +501,7 @@
                 <li><a href="#products" class="nav-link">Products</a></li>
                 <li><a href="#benefits" class="nav-link">Benefits</a></li>
                 <li><a href="Review.html" class="nav-link">Reviews</a></li>
+                <li><a href="vision.html" class="nav-link">Our Vision</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <a href="#order" class="cta-button">Order Now</a>
@@ -567,6 +581,7 @@
     <!-- Nutrition Information Section -->
     <section class="nutrition-section" id="nutrition">
         <div class="nutrition-table-container">
+            <img src="Made-in-AU.jpg" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge">
             <div class="nutrition-title">Nutritional Information</div>
             <table class="nutrition-table">
                 <tr>
@@ -655,102 +670,7 @@
     </section>
 
     <!-- Benefits Section -->
-    <section id="benefits" class="benefits-section">
-        <div class="container">
-            <h2 class="section-title">Why Choose BeetBOOST?</h2>
-            <div class="benefits-grid">
-                <div class="benefit-item">
-                    <a class="benefit-icon-link" href="https://link.springer.com/article/10.1007/s40279-014-0149-y" target="_blank" rel="noopener noreferrer" title="Read scientific study on beetroot and exercise performance">
-                        <span class="benefit-icon">❤️
-                            <svg class="external-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
-                                <path d="M14.243 2.343a1 1 0 011.414 0l2 2a1 1 0 010 1.414l-8.5 8.5a1 1 0 01-.497.263l-4 1a1 1 0 01-1.213-1.213l1-4a1 1 0 01.263-.497l8.5-8.5zM15.657 4L5 14.657V17h2.343L17 6.343 15.657 4z"/>
-                            </svg>
-                        </span>
-                    </a>
-                    <h3>Heart Health</h3>
-                    <p>Beetroot naturally contains nitrates that support cardiovascular health and blood pressure regulation.<br><span style="color:var(--soft-rose);font-size:0.95em;">Rich in folate, manganese, and copper for optimal heart function.</span></p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-icon">💪</div>
-                    <h3>Athletic Performance</h3>
-                    <p>Enhance your workout with natural nitrates that improve oxygen efficiency and endurance.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-icon">🌱</div>
-                    <h3>Gut Health</h3>
-                    <p>Probiotics and fiber support digestive health while beetroot promotes beneficial gut bacteria.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-icon">🚫</div>
-                    <h3>Dairy-Free</h3>
-                    <p>Perfect for lactose-intolerant individuals and those following plant-based diets.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-icon">🔬</div>
-                    <h3>Antioxidant Rich</h3>
-                    <p>Betalains and other antioxidants help combat oxidative stress and inflammation.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-icon">⚡</div>
-                    <h3>Natural Energy</h3>
-                    <p>Sustained energy release without artificial stimulants or processed sugars.</p>
-                </div>
-            </div>
-            <!-- Complete Amino Acid Profile Section with molecules -->
-            <div class="complete-amino-section" style="position: relative;">
-                <div style="display: flex; flex-direction: column; align-items: center;">
-                    <div style="display: flex; gap: 28px; margin-bottom: 1.2rem;">
-                        <!-- Example amino acid molecule icons (SVG, free use, styled for your palette) -->
-                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Leucine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                            <circle cx="26" cy="26" r="20" fill="#C41E3A" opacity="0.15"/>
-                            <circle cx="26" cy="26" r="12" fill="#8B1538" opacity="0.25"/>
-                            <circle cx="26" cy="26" r="5" fill="#4A7C59"/>
-                            <circle cx="40" cy="18" r="4" fill="#E8B4CB"/>
-                            <circle cx="14" cy="36" r="3" fill="#C41E3A"/>
-                            <line x1="26" y1="26" x2="40" y2="18" stroke="#8B1538" stroke-width="2"/>
-                            <line x1="26" y1="26" x2="14" y2="36" stroke="#C41E3A" stroke-width="2"/>
-                        </svg>
-                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Valine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                            <circle cx="26" cy="26" r="20" fill="#4A7C59" opacity="0.13"/>
-                            <circle cx="26" cy="26" r="12" fill="#C41E3A" opacity="0.18"/>
-                            <circle cx="26" cy="26" r="5" fill="#8B1538"/>
-                            <circle cx="38" cy="34" r="4" fill="#E8B4CB"/>
-                            <circle cx="16" cy="16" r="3" fill="#C41E3A"/>
-                            <line x1="26" y1="26" x2="38" y2="34" stroke="#4A7C59" stroke-width="2"/>
-                            <line x1="26" y1="26" x2="16" y2="16" stroke="#C41E3A" stroke-width="2"/>
-                        </svg>
-                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Isoleucine molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                            <circle cx="26" cy="26" r="20" fill="#E8B4CB" opacity="0.15"/>
-                            <circle cx="26" cy="26" r="12" fill="#C41E3A" opacity="0.21"/>
-                            <circle cx="26" cy="26" r="5" fill="#8B1538"/>
-                            <circle cx="34" cy="14" r="4" fill="#4A7C59"/>
-                            <circle cx="20" cy="40" r="3" fill="#C41E3A"/>
-                            <line x1="26" y1="26" x2="34" y2="14" stroke="#C41E3A" stroke-width="2"/>
-                            <line x1="26" y1="26" x2="20" y2="40" stroke="#8B1538" stroke-width="2"/>
-                        </svg>
-                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" aria-label="Amino acid molecule" style="background: #F5F2E8; border-radius: 50%; box-shadow: 0 2px 8px #e8b4cb66;">
-                            <circle cx="26" cy="26" r="20" fill="#C41E3A" opacity="0.10"/>
-                            <circle cx="26" cy="26" r="12" fill="#4A7C59" opacity="0.18"/>
-                            <circle cx="26" cy="26" r="5" fill="#C41E3A"/>
-                            <circle cx="38" cy="20" r="4" fill="#E8B4CB"/>
-                            <circle cx="16" cy="32" r="3" fill="#8B1538"/>
-                            <line x1="26" y1="26" x2="38" y2="20" stroke="#4A7C59" stroke-width="2"/>
-                            <line x1="26" y1="26" x2="16" y2="32" stroke="#C41E3A" stroke-width="2"/>
-                        </svg>
-                    </div>
-                    <div class="complete-amino-title" style="margin-bottom: 1.3rem;">Complete Amino Acid Profile</div>
-                </div>
-                <div class="complete-amino-desc">
-                    BeetBOOST is formulated with a premium soy protein blend that delivers all 9 essential amino acids, including 1.9g of BCAAs (leucine, isoleucine, valine) per 100g, supporting muscle recovery and growth.<br><br>
-                    Unlike most plant-based yogurts, BeetBOOST provides a complete protein profile comparable to dairy, but without lactose or animal products. This makes it a perfect protein source for vegans and anyone seeking clean, plant-based nutrition.<br><br>
-                    Complete plant proteins not only help build and repair muscle, but also support immune health and overall wellness, making BeetBOOST an ideal choice for active lifestyles and balanced diets.<br>
-                    <span style="color:#E8B4CB;font-size:0.97em;font-weight:600;display:block;margin-top:1.2rem;">
-                        Enjoy BeetBOOST as a protein-rich snack, post-workout recovery, or anytime your body craves quality plant protein!
-                    </span>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- ... (unchanged, as above) ... -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -765,15 +685,13 @@
                     <h3>Quick Links</h3>
                     <a href="#products">Products</a>
                     <a href="#benefits">Benefits</a>
-                    <a href="#about">About Us</a>
+                    <a href="vision.html">Our Vision</a>
                     <a href="#contact">Contact</a>
                 </div>
                 <div class="footer-section">
                     <h3>Customer Support</h3>
-                    <a href="#">FAQ</a>
-                    <a href="#">Shipping Info</a>
-                    <a href="#">Returns</a>
-                    <a href="#">Contact Support</a>
+                    <a href="FAQ.html">FAQ</a>
+                    <a href="support.html">Contact Support</a>
                 </div>
                 <div class="footer-section">
                     <h3>Connect With Us</h3>
