--- a/vision.html
+++ b/vision.html
@@ -72,7 +72,7 @@
     <div class="container">
         <h1>Our Vision</h1>
         <div class="concept-map">
-            <img src="map.jpg" alt="BeetBOOST Concept Map">
+            <img src="Map.jpg" alt="BeetBOOST Concept Map">
         </div>
         <div class="bullets">
             <ul>
