--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             position: absolute;
             inset: 0;
             z-index: 0;
-            background: url('https://pplx-res.cloudinary.com/image/private/user_uploads/40364014/3593c0ac-01e3-43a2-8aec-cca1018c5c15/Perth.jpg') center center/cover no-repeat;
+            background: <img src="Perth.jpg"> center center/cover no-repeat;
             opacity: 0.45;
             filter: brightness(0.7) blur(1px);
         }
@@ -581,7 +581,7 @@
     <!-- Nutrition Information Section -->
     <section class="nutrition-section" id="nutrition">
         <div class="nutrition-table-container">
-            <img src="Made-in-AU.jpg" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge">
+            <img src="Made in AU.jpg" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge">
             <div class="nutrition-title">Nutritional Information</div>
             <table class="nutrition-table">
                 <tr>
