--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
     <!-- Nutrition Information Section -->
     <section class="nutrition-section" id="nutrition">
         <div class="nutrition-table-container">
-            <img src="Made in AU.jpg" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge">
+            <img src="Made in AU.PNG" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge">
             <div class="nutrition-title">Nutritional Information</div>
             <table class="nutrition-table">
                 <tr>
