--- a/index.html
+++ b/index.html
@@ -587,97 +587,159 @@
     </section>
 
     <!-- Nutrition Information Section -->
-    <section class="nutrition-section" id="nutrition">
-        <div class="nutrition-table-container">
-            <div class="nutrition-header-flex">
-                <span class="nutrition-title">Nutritional Information</span>
-                <img src="Made in AU.PNG" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge-inline">
-            </div>
-            <table class="nutrition-table">
-                <tr>
-                    <th>Nutrient</th>
-                    <th>Per 100g</th>
-                    <th>Per Serve (200g)</th>
-                </tr>
-                <tr>
-                    <td>Energy</td>
-                    <td>604 kJ</td>
-                    <td>1207 kJ</td>
-                </tr>
-                <tr>
-                    <td>Protein</td>
-                    <td>7.4 g</td>
-                    <td>14.9 g</td>
-                </tr>
-                <tr>
-                    <td>Fat, total</td>
-                    <td>8.5 g</td>
-                    <td>17.0 g</td>
-                </tr>
-                <tr>
-                    <td>- Saturated</td>
-                    <td>7.6 g</td>
-                    <td>15.3 g</td>
-                </tr>
-                <tr>
-                    <td>Carbohydrate</td>
-                    <td>12.4 g</td>
-                    <td>24.7 g</td>
-                </tr>
-                <tr>
-                    <td>- Sugars</td>
-                    <td>9.3 g</td>
-                    <td>18.6 g</td>
-                </tr>
-                <tr>
-                    <td>Dietary Fibre</td>
-                    <td>–</td>
-                    <td>–</td>
-                </tr>
-                <tr>
-                    <td>Sodium</td>
-                    <td>122 mg</td>
-                    <td>244 mg</td>
-                </tr>
-                <tr>
-                    <td>Leucine (BCAA)</td>
-                    <td>852 mg</td>
-                    <td>1704 mg</td>
-                </tr>
-                <tr>
-                    <td>Isoleucine (BCAA)</td>
-                    <td>534 mg</td>
-                    <td>1068 mg</td>
-                </tr>
-                <tr>
-                    <td>Valine (BCAA)</td>
-                    <td>515 mg</td>
-                    <td>1030 mg</td>
-                </tr>
-                <tr>
-                    <td>Threonine</td>
-                    <td>838 mg</td>
-                    <td>1676 mg</td>
-                </tr>
-                <tr>
-                    <td>Arginine</td>
-                    <td>–</td>
-                    <td>–</td>
-                </tr>
-                <tr>
-                    <td>Total BCAA</td>
-                    <td>1901 mg</td>
-                    <td>3802 mg</td>
-                </tr>
-            </table>
-            <div class="nutrition-footnote">
-                <strong>Ingredients:</strong> Coconut yoghurt (76.7%) [Water, organic coconut cream, tapioca starch, cane sugar, live cultures (L.casei, L.acidophilus, L.bulgaricus, S.thermophilus, Bifidobacterium)], Beetroot (6.9%), Beetroot powder (2.7%), Tapioca starch (2.7%), Vitamin B1.<br>
-                <strong>Allergens:</strong> Contains soy. May contain tree nuts (coconut).<br>
-                <strong>Storage:</strong> Keep refrigerated at 4°C or below. Consume within 5 days after opening.<br>
-                <strong>Made in Australia</strong> from local and imported ingredients.
-            </div>
+   <section class="nutrition-section" id="nutrition">
+    <div class="nutrition-table-container">
+        <div class="nutrition-header-flex">
+            <span class="nutrition-title">Nutritional Information</span>
+            <img src="Made in AU.PNG" alt="Made in Australia from at least 47% Australian ingredients" class="made-in-au-badge-inline">
         </div>
-    </section>
+        <table class="nutrition-table">
+            <tr>
+                <th>Nutrient</th>
+                <th>Per 100g</th>
+                <th>Per Serve (200g)</th>
+            </tr>
+            <tr>
+                <td>Energy</td>
+                <td>604 kJ</td>
+                <td>1207 kJ</td>
+            </tr>
+            <tr>
+                <td>Protein</td>
+                <td>7.4 g</td>
+                <td>14.9 g</td>
+            </tr>
+            <tr>
+                <td>Fat, total</td>
+                <td>8.5 g</td>
+                <td>17.0 g</td>
+            </tr>
+            <tr>
+                <td>- Saturated</td>
+                <td>7.6 g</td>
+                <td>15.3 g</td>
+            </tr>
+            <tr>
+                <td>Carbohydrate</td>
+                <td>12.4 g</td>
+                <td>24.7 g</td>
+            </tr>
+            <tr>
+                <td>- Sugars</td>
+                <td>9.3 g</td>
+                <td>18.6 g</td>
+            </tr>
+            <tr>
+                <td>Dietary Fibre</td>
+                <td>–</td>
+                <td>–</td>
+            </tr>
+            <tr>
+                <td>Sodium</td>
+                <td>122 mg</td>
+                <td>244 mg</td>
+            </tr>
+            <tr>
+                <td>Leucine (BCAA)</td>
+                <td>852 mg</td>
+                <td>1704 mg</td>
+            </tr>
+            <tr>
+                <td>Isoleucine (BCAA)</td>
+                <td>534 mg</td>
+                <td>1068 mg</td>
+            </tr>
+            <tr>
+                <td>Valine (BCAA)</td>
+                <td>515 mg</td>
+                <td>1030 mg</td>
+            </tr>
+            <tr>
+                <td>Threonine</td>
+                <td>838 mg</td>
+                <td>1676 mg</td>
+            </tr>
+            <tr>
+                <td>Arginine</td>
+                <td>–</td>
+                <td>–</td>
+            </tr>
+            <tr>
+                <td>Total BCAA</td>
+                <td>1901 mg</td>
+                <td>3802 mg</td>
+            </tr>
+        </table>
+        <div class="nutrition-footnote">
+            <strong>Ingredients:</strong> Coconut yoghurt (76.7%) [Water, organic coconut cream, tapioca starch, cane sugar, live cultures (L.casei, L.acidophilus, L.bulgaricus, S.thermophilus, Bifidobacterium)], Beetroot (6.9%), Beetroot powder (2.7%), Tapioca starch (2.7%), Vitamin B1.<br>
+            <strong>Allergens:</strong> Contains soy. May contain tree nuts (coconut).<br>
+            <strong>Storage:</strong> Keep refrigerated at 4°C or below. Consume within 5 days after opening.<br>
+            <strong>Made in Australia</strong> from local and imported ingredients.
+        </div>
+    </div>
+</section>
+
+<style>
+.nutrition-header-flex {
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    margin-bottom: 1.5rem;
+}
+.nutrition-title {
+    color: var(--primary-burgundy);
+    font-size: 2rem;
+    font-weight: 700;
+    white-space: nowrap;
+}
+.made-in-au-badge-inline {
+    height: 48px;
+    width: auto;
+    display: block;
+}
+@media (max-width: 600px) {
+    .nutrition-header-flex {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.7rem;
+    }
+    .made-in-au-badge-inline {
+        height: 38px;
+    }
+}
+.nutrition-table-container {
+    max-width: 700px;
+    margin: 0 auto;
+    background: var(--pure-white);
+    border-radius: 18px;
+    box-shadow: 0 6px 24px rgba(139, 21, 56, 0.08);
+    padding: 2rem 2rem 1rem 2rem;
+    position: relative;
+}
+.nutrition-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 1rem;
+}
+.nutrition-table th, .nutrition-table td {
+    padding: 0.7rem 0.5rem;
+    text-align: left;
+}
+.nutrition-table th {
+    color: var(--vibrant-magenta);
+    font-weight: 600;
+    border-bottom: 2px solid var(--soft-rose);
+}
+.nutrition-table tr:not(:last-child) td {
+    border-bottom: 1px solid #f0e6ea;
+}
+.nutrition-footnote {
+    font-size: 0.95rem;
+    color: var(--text-light);
+    margin-top: 0.5rem;
+    text-align: center;
+}
+</style>
 
     <!-- Benefits Section -->
     <!-- (The full Benefits section as in your original code remains here) -->
