--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 <li><a href="vision.html" class="nav-link">Our Vision</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <a href="#order" class="cta-button">Order Now</a>
+            <a href="order.html" class="cta-button">Order Now</a>
         </div>
     </nav>
 
