--- a/order.html
+++ b/order.html
@@ -344,7 +344,7 @@
                 </div>
             </div>
             <div class="package-image">
-                <img src="package.PNG" alt="BeetBOOST Packaging">
+                <img src="package.jpg" alt="BeetBOOST Packaging">
             </div>
             <button type="submit" class="order-button">Buy Now</button>
         </form>
