--- a/index.html
+++ b/index.html
@@ -640,6 +640,7 @@
                 <li><a href="#benefits" class="nav-link">Benefits</a></li>
                 <li><a href="Review.html" class="nav-link">Reviews</a></li>
                 <li><a href="vision.html" class="nav-link">Our Vision</a></li>
+                <li><a href="why.html" class="nav-link">Why Beetroot ?</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <a href="order.html" class="cta-button">Order Now</a>
